# lua-config

./: Cargo.toml  LICENSE  README.md  example_config.lua
.github/workflows/: rust.yml
example/: config.lua
example/src/: main.rs
examples/: Cargo.toml  config.lua  default_config.lua
examples/complex/: Cargo.toml  \  build.rs
examples/complex/data/: config.lua
examples/complex/include/: config.default.lua
examples/complex/src/: main.rs
examples/fetch_data/: Cargo.toml  config.lua
examples/fetch_data/src/: main.rs
examples/simple/: Cargo.toml  config.lua
examples/simple/src/: main.rs
examples/src/: main.rs
src/: lib.rs
tests/: LuaConfig.rs  LuaType.rs
tests/data/: boolean.default.lua  boolean.lua  complex.default.lua  complex.lua  fetch_data.lua  integer.default.lua  integer.lua  number.default.lua  number.lua  string.default.lua  string.lua
