[package]
name = "lua-config"
description = "A simple rust configuration tool using lua"
authors = ["https://github.com/LeviLovie/"]
license = "MIT"
keywords = ["configuration", "lua"]
repository = "https://github.com/LeviLovie/lua-config"
version = "1.1.2"
edition = "2021"

[dependencies]
rlua = "0.20.1"
