[package]
name = "lua-config"
description = "A simple rust configuration tool using lua"
authors = ["https://github.com/LeviLovie/"]
license = "MIT"
keywords = ["configuration", "lua"]
repository = "https://github.com/LeviLovie/lua-config"
version = "1.1.2"
edition = "2021"

[dependencies]
rlua = "0.20.1"

[features]
fetch_data = ["reqwest", "serde", "serde_json", "json"]

[dependencies.reqwest]
version = "0.12.5"
features = ["blocking"]
optional = true

[dependencies.serde]
version = "1.0.207"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true


[dependencies.json]
version = "0.12.4"
optional = true
