[package]
name = "lua-config"
description = "A simple rust configuration tool using lua"
authors = ["https://github.com/LeviLovie/"]
license = "MIT"
keywords = ["configuration", "lua"]
repository = "https://github.com/LeviLovie/lua-config"
version = "1.4.1"
edition = "2021"

[dependencies]
rlua = "0.20.1"
reqwest = {version = "0.12.5", features = ["blocking"]}
serde = {version = "1.0.207", features = ["derive"]}
serde_json = {version = "1.0"}
json = "0.12.4"

[features]
crash_on_none = []
